fixed the remove buttons on mobile

--- a/style.css
+++ b/style.css
@@ -346,5 +346,20 @@ a{
         color: white;
         opacity: 0;
     }
+
+    .removeButton{
+        margin-top: 3px;
+        margin-bottom: 15px;
+        border-radius: 3px;
+        border: 1px solid rgb(85, 85, 85);
+        padding: 9px;
+        background-color: rgb(239, 239, 239);
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+
+    #nominationsList{
+        padding-inline-start: 20px;
+    }
     
 }
